--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Laila Mallette-Fraser</h1>
 
 <p>Hi, my name is Laila. I am a journalism major born in Brooklyn. I was actually raised in Georgia, then later lived in Jamaica with my grandparents. I have always loved to travel and am very into art, mainly due to my grandfather being an artist
   They've always encouraged me to go for what I want and to explore new interests. After living so simplictically in Jamaica for almost a decade, coming back to New York was pretty overwhelming to be honest, but I'm determined to try as many new things as I can.
