--- a/image2.html
+++ b/image2.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
 
+<html>
+
+<head>
+
+<title>Homework 2</title>
+
+</head>
+
+<body>
+
+<h1>Image 2</h1>
+
+<img src="homework2/image 2.jpeg" width="80%">
+  <a href="homework2.html">Go to first image</a>
+  <a href="index.html">Go to homepage</a>
+
+</body>
+
+</html>
