--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <p>Hi, my name is Laila. I am a journalism major born in Brooklyn. I was actually raised in Georgia, then later lived in Jamaica with my grandparents. I have always loved to travel and am very into art, mainly due to my grandfather being an artist
   They've always encouraged me to go for what I want and to explore new interests. After living so simplictically in Jamaica for almost a decade, coming back to New York was pretty overwhelming to be honest, but I'm determined to try as many new things as I can.
   I have very little experience with photography and photoshop, so I feel a little in over my head, but I am excited to try nontheless.</p>
-
+  <ul>
+    <li><a href="readings.html">Readings</a></li>
+    <li><a href="homework2.html">Homework 2</a></li>
+    <li><a href="homework3.html">Homework 3</a></li>
+  </ul>
 </body>
 
 </html>
