--- a/image2.html
+++ b/image2.html
@@ -11,6 +11,7 @@
 <body>
 
 <h1>Image 2</h1>
+<p> I thought this picture evoked a stillness, almost abandoned and melancholic feeling that I thought was interesting. Also the bicycle being taken behind the bars gives the idea of being caged. While editing I thought the blue hue added to this dreary vibe. </p>  
 
 <img src="homework2/image2.jpeg" width="80%">
   <a href="homework2.html">Go to first image</a>
