--- a/homework2.html
+++ b/homework2.html
@@ -13,7 +13,8 @@
 <h1>Homework 2</h1>
 
 <h2>Image 1</h2>
-
+<p> I thought this picture evoked a stillness, almost abandoned and melancholic feeling that I thought was interesting. Also the bicycle being taken behind the bars gives the idea of being caged. While editing I thought the blue hue added to this dreary vibe. </p>
+  
   <img src="Homework/Image 1.jpeg" width="80%">
   <a href="image2.html">Go to next image</a>
   <a href="index.html">Go to homepage</a>
